--- a/index.html
+++ b/index.html
@@ -1,35 +1,45 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Ranbear</title>
-  </head>
-  <body>
-    <table>
-      <tr>
-        <td><img src="Ranbear.png" alt="Ranbear"></td>
-        <td><h1>Ranbear</h1>
-        <p>Welcome to my website! I'm Ranbear and I'm currently learning web development. I'm doing HTML at the moment, soon to move on to CSS</p></td>
-      </tr>
 
-    </table>
-      <hr size="3" no shade>
-  <h3>Skills</h3>
-<table>
-  <tr>
-    <td>HTML⭐⭐</td>
-  </tr>
-  <tr>
-    <td>CSS</td>
-  </tr>
-  <tr>
-    <td>JS</td>
-  </tr>
-</table>
-      <tr>
-        <td><a href="contact-me.html">Contact me!</a></td>
-      </tr>
-    </table>
+<head>
+  <meta charset="utf-8">
+  <title>Ranbear</title>
+
+<link rel="stylesheet" href="CSS/style.css">
+
+</head>
+
+<body>
+  <table>
+    <tr>
+      <td><img src="Images/Ranbear.png" alt="Ranbear"></td>
+
+        <td>
+          <h1>Ranbear</h1>
+        <p>Welcome to my website! I'm Ranbear and I'm currently learning web development. I'm doing CSS at the moment!</p>
+      </td>
+    </tr>
+
   </table>
-  </body>
+  <hr>
+  <h3>Skills</h3>
+  <table>
+    <tr>
+      <td>HTML⭐⭐</td>
+    </tr>
+    <tr>
+      <td>CSS</td>
+    </tr>
+    <tr>
+      <td>JS</td>
+    </tr>
+  </table><br>
+  <tr>
+    <td><a href="contact-me.html">Contact me!</a></td>
+  </tr>
+  </table>
+  </table>
+</body>
+
 </html>
+
