--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta charset="utf-8">
   <title>Ranbear</title>
 
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="CSS/style.css">
 
 </head>
 
 <body>
   <table>
     <tr>
-      <td><img src="Images/Ranbear.png" alt="Ranbear"></td>
+      <td><img src="Ranbear.png" alt="Ranbear"/></td>
 
         <td>
           <h1>Ranbear</h1>
@@ -42,4 +42,3 @@
 </body>
 
 </html>
-
